fix: improve readability on mobile

--- a/website/src/internal/static/resource/css/body.css
+++ b/website/src/internal/static/resource/css/body.css
@@ -11,3 +11,9 @@ body {
 html {
   scroll-behavior: smooth;
 }
+
+@media (max-width: 1000px) and (orientation: portrait) {
+  html {
+    font-size: 24px;
+  }
+}
